--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Venom Snake Game</h1>
+    </header>
+
+    <main>
+
+    </main>
     
+    <footer>
+        
+    </footer>
 </body>
 </html>
