add main content to the title screen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     </header>
 
     <main>
-        
+        <h2 class="game-title">Venom Snake Game</h2>
+        <button class="start-button">Start</button>
     </main>
     
     <footer>
