refactory: refactor project

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <main>
         <h2 class="game-title">Venom Snake Game</h2>
-        <button class="start-button">Start</button>
+        <a href="game.html">
+            <button class="start-button">Start</button>
+        </a>
     </main>
     
     <footer>
