--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Venom Snake Game</title>
+    <title>Play Venom Snake Game</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
     <main>
         <h2 class="game-title">Venom Snake Game</h2>
         <a href="game.html">
-            <button class="start-button">Start</button>
+            <button class="start-button">Play</button>
         </a>
     </main>
     
