--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
                 <p>Pontuação: <span id="pontuacao-display">0</span></p>
             </div>
             
-            <canvas id="tela" width="300" height="300"></canvas>
+            <canvas id="screen" width="300" height="300"></canvas>
             
             <div class="game-controls">
                 <p>Use as setas do teclado para controlar</p>
