--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Venom Snake Game</title>
+    <link rel="icon" type="image/png" href="./sprites/venom_head.png">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
